--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,9 @@ img {
   font-weight: var(--font-semi);
 }
 @media screen and (max-width: 768px) {
+  .section-title{
+    display: none;
+  }
   .nav__menu {
     position: fixed;
     top: var(--header-height);
